maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:4: error: type mismatch;
 found   : (Int, Int)
 required: Array[Int]
  BiscuitCoord = DetectBiscuit()
                              ^